--- a/app/javascript/packs/src/index.scss
+++ b/app/javascript/packs/src/index.scss
@@ -17,9 +17,9 @@ code {
     monospace;
 }
 
-ul{
-  list-style: none;
-}
+// ul{
+//   list-style: none;
+// }
 
 a:link{
   text-decoration: none;
